--- a/FinalProject/Survival/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/FinalProject/Survival/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -128,7 +128,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettin
 LastLevel=/Game/Arena
 
 [ModuleFileTracking]
-Survival.TimeStamp=2021.12.15-17.15.10
+Survival.TimeStamp=2021.12.15-20.09.58
 Survival.LastCompileMethod=Runtime
 PakFile.TimeStamp=2021.08.09-16.06.20
 PakFile.LastCompileMethod=Unknown
@@ -967,25 +967,30 @@ AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-BP_SmallEnemyTank_C="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
-EnemyTank="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
-BaseTank="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
-Character="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
-Pawn="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
-BP_BigEnemyTank_C="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
-BP_PlayerTank_C="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
-PlayerTank="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" "
+BP_SmallEnemyTank_C="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.Tags\" "
+EnemyTank="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.Tags\" "
+BaseTank="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.Tags\" "
+Character="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.Tags\" "
+Pawn="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.Tags\" "
+BP_BigEnemyTank_C="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.Tags\" "
+BP_PlayerTank_C="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.Tags\" "
+PlayerTank="\"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Replication.ReplicatedMovement\" \"Object.Actor.Tags\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/Blueprints/BP_BigEnemyTank.BP_BigEnemyTank
+OpenAssetsAtExit=/Game/Blueprints/BP_SmallEnemyTank.BP_SmallEnemyTank
+OpenAssetsAtExit=/Game/Blueprints/BP_CoverPoint.BP_CoverPoint
+OpenAssetsAtExit=/Game/Blueprints/BP_SurvivalGM.BP_SurvivalGM
+OpenAssetsAtExit=/Game/Blueprints/BP_PlayerTank.BP_PlayerTank
 
 [PluginBrowser]
 InstalledPlugins=DarkerNodes
 InstalledPlugins=XRVisualization
 
 [RootWindow]
-ScreenPosition=X=320.000 Y=180.000
-WindowSize=X=1280.000 Y=720.000
+ScreenPosition=X=158.400 Y=173.600
+WindowSize=X=1283.200 Y=723.200
 InitiallyMaximized=True
 
 [ContentBrowser]
@@ -1925,6 +1930,37 @@ EditorKeyboardShortcutSettings.FullBlueprintEditor=True
 EditorKeyboardShortcutSettings.BlueprintFavoritesPalette=True
 EditorKeyboardShortcutSettings.BlueprintEditorSpawnNodes=True
 EditorKeyboardShortcutSettings.BlueprintEditor=True
+BP_CoverPoint_C.Tick=True
+PropertyWrapper.Variable=True
+PropertyWrapper.DefaultValueCategory=True
+K2Node_VariableSet.Variable=True
+K2Node_VariableSet.DefaultValueCategory=True
+PropertyWrapper.Events=True
+K2Node_VariableGet.Variable=True
+K2Node_VariableGet.DefaultValueCategory=True
+K2Node_VariableGet.Events=True
+BP_SurvivalGM_C.SurvivalGM=True
+BP_CoverPoint_C.Default=True
+EdGraph.Graph=True
+EdGraph.Inputs=True
+EdGraph.Outputs=True
+K2Node_FunctionResult.Graph=True
+BoxComponent.Variable=True
+BoxComponent.TransformCommon=True
+BoxComponent.Sockets=True
+BoxComponent.Shape=True
+BoxComponent.Navigation=True
+BoxComponent.ComponentTick=True
+BoxComponent.Rendering=True
+BoxComponent.Physics=True
+BoxComponent.Collision=True
+BoxComponent.Tags=True
+BoxComponent.ComponentReplication=True
+BoxComponent.Cooking=True
+BoxComponent.Events=True
+BP_BigEnemyTank_C.LOD=True
+BP_SmallEnemyTank_C.LOD=True
+K2Node_VariableSet.Events=True
 
 [DetailMultiObjectNodeExpansion]
 EditorStyleSettings=True
@@ -1964,25 +2000,28 @@ TimelineEnabledSnaps=CompositeSegment
 TimelineEnabledSnaps=MontageSection
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/BP_BigEnemyTank
-MRUItem1=/Game/Blueprints/BP_TankAI
-MRUItem2=/Game/Blueprints/BP_SmallEnemyTank
-MRUItem3=/Game/Blueprints/BP_EnemyTank
-MRUItem4=/Game/Arena
-MRUItem5=/Game/yTankAI
-MRUItem6=/Game/Blueprints/BP_PlayerTank
-MRUItem7=/Game/Blueprints/BP_Projectile
-MRUItem8=/Game/Blueprints/BP_SurvivalGM
-MRUItem9=/Game/BP_EnemyTank
-MRUItem10=/Game/BP_Projectile
-MRUItem11=/Game/BP_PlayerTank
-MRUItem12=/Game/Assets/Turret/Turret
-MRUItem13=/Game/Assets/Tank/Tank
+MRUItem0=/Game/Blueprints/BP_Projectile
+MRUItem1=/Game/Blueprints/BP_PlayerTank
+MRUItem2=/Game/Blueprints/BP_BigEnemyTank
+MRUItem3=/Game/Blueprints/BP_SmallEnemyTank
+MRUItem4=/Game/Blueprints/BP_SurvivalGM
+MRUItem5=/Game/Blueprints/BP_CoverPoint
+MRUItem6=/Game/Blueprints/BP_TankAI
+MRUItem7=/Game/Blueprints/BP_EnemyTank
+MRUItem8=/Game/Arena
+MRUItem9=/Game/yTankAI
+MRUItem10=/Game/BP_EnemyTank
+MRUItem11=/Game/BP_Projectile
+MRUItem12=/Game/BP_PlayerTank
+MRUItem13=/Game/Assets/Turret/Turret
+MRUItem14=/Game/Assets/Tank/Tank
 
 [AssetEditorToolkitTabLocation]
 /Game/Assets/Tank/Tank.Tank=0
 /Game/Assets/Turret/Turret.Turret=0
 /Game/Blueprints/BP_SmallEnemyTank.BP_SmallEnemyTank=0
+/Game/Blueprints/BP_SurvivalGM.BP_SurvivalGM=0
+/Game/Blueprints/BP_Projectile.BP_Projectile=0
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="SkeletalMeshEditor",Commands=)
@@ -2076,5 +2115,5 @@ LastLogListing=LoadErrors
 BP_SmallEnemyTank_C=BP_EnemyTank_C.Rendering.TextureStreaming,BP_EnemyTank_C.Rendering.LOD,
 CapsuleComponent=
 BP_BigEnemyTank_C=BP_EnemyTank_C.Rendering.TextureStreaming,BP_EnemyTank_C.Rendering.LOD,
-SceneComponent=BP_EnemyTank_C.Rendering.TextureStreaming,BP_EnemyTank_C.Rendering.LOD,
+SceneComponent=
 
